# schema.aidops.org

./: .gitignore  CLAUDE.md  LICENSE  LICENSE-APACHE  README.md  aidops.yaml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  deploy.yml
docs/: ps-integration-research-and-plan.md
schema/: _meta.yaml  categories.yaml  project.yaml
schema/bibliography/: a-weai-guide-2020.yaml  acaps-assessment-2014.yaml  acaps-market-assessment-2014.yaml  adaptation-fund-rmf-2019.yaml  agir-sahel-resilience-framework.yaml  alnap-hpg-protection-2012.yaml  assar-adaptive-capacity-2017.yaml  atc-20.yaml  calp-misma-2018.yaml  calp-programme-quality-toolbox.yaml  care-cvca-handbook-2019.yaml  chs-2024.yaml  chs-alliance-verification.yaml  crews-impact-based-forecasting-2021.yaml  crs-markit-2023.yaml  dhs-barriers-module.yaml  dhs-child-health.yaml  dhs-domestic-violence-module-2022.yaml  dhs-family-planning.yaml  dhs-health-insurance-as45.yaml  dhs-household-possessions.yaml  dhs-oop-expenditure-as59.yaml  dhs-spa-revised-2022.yaml  dhs-unmet-need-as25.yaml  dhs-woman-questionnaire.yaml  egriss-iris-2020.yaml  ellsberg-heise-2005.yaml  emma-toolkit-v2-2017.yaml  fanta-hhs.yaml  fao-ex-act-2021.yaml  fao-fies.yaml  fao-giews-fpma.yaml  fao-giews-pastoral-monitoring-2020.yaml  (+137 more)
scripts/: emit_preview_bundles.py  fetch_publicschema.py  migrate_to_linkml.py
site/: astro.config.mjs  package-lock.json  package.json  playwright.config.ts
tests/: conftest.py  test_build.py  test_export.py  test_integration.py  test_preview_export.py  test_rdf_export.py  test_smoke.py  test_validate.py
(+1315 files in other folders)
